--- a/CSS-My Site/css/styles.css
+++ b/CSS-My Site/css/styles.css
@@ -1,3 +1,23 @@
 body {
+    margin: 0px;
+}
+
+div {
+    background-color: #8fd9a8;
+}
+
+h1 {
+    margin: 0px;
+}
+
+.mid_container {
+    height: 200px;
+    width: 200px;
+    background-color: red;
+}
+
+.bot_container {
+    height: 200px;
+    width: 200px;
     background-color: blue;
 }
