--- a/CSS-My Site/css/styles.css
+++ b/CSS-My Site/css/styles.css
@@ -1,13 +1,25 @@
 body {
     margin: 0px;
+    text-align: center;
+    font-family: 'Merriweather', serif;
 }
 
-div {
-    background-color: #8fd9a8;
+.top-container {
+    background-color: #E4F9F5;
+    padding-top: 100px;
+    position: relative;
 }
 
 h1 {
     margin: 0px;
+    font-family: 'Sacramento', cursive;
+}
+h2 {
+    font-family: 'Montserrat', sans-serif;
+}
+
+h3 {
+    font-family: 'Montserrat', sans-serif;
 }
 
 .mid_container {
@@ -20,4 +32,14 @@ h1 {
     height: 200px;
     width: 200px;
     background-color: blue;
+}
+.bottom-cloud {
+    position: absolute;
+    top: 150px;
+}
+.top-cloud {
+    position: absolute;
+    top: 30px;;
+    right:400px;
+
 }
